chore: Using official tool again because gpg will only fetch one uid via WKD

--- a/.well-known/Makefile
+++ b/.well-known/Makefile
@@ -1,6 +1,7 @@
 
 .PHONY: generate-WKD
 generate-WKD:
-	#gpg --list-options show-only-fpr-mbox -k "@coelacanthus.moe" | $$(gpgconf --list-dirs libexecdir)/gpg-wks-client -v --install-key
+	# Using official tool again because gpg will only fetch one uid via WKD
+	gpg --list-options show-only-fpr-mbox -k "@coelacanthus.moe" | $$(gpgconf --list-dirs libexecdir)/gpg-wks-client -v --install-key
 	# Not use official tool for it only export one uid
-	gpg --no-armor --export i@coelacanthus.moe > openpgpkey/coelacanthus.moe/hu/yoshewjxwxj3dtezbu34waxgwahxoo4n
+	#gpg --no-armor --export i@coelacanthus.moe > openpgpkey/coelacanthus.moe/hu/yoshewjxwxj3dtezbu34waxgwahxoo4n
